# xknowledge

./: .env.example  .gitignore  pyproject.toml
qawiki/: __init__.py  cli.py  knowledge.py  pipeline.py
qawiki/configs/: default.yaml
qawiki/core/: __init__.py  critic.py  insight.py  llm.py  source.py  summarizer.py  utils.py
qawiki/governance/: __init__.py  review.py  states.py
qawiki/parsers/: __init__.py  base.py  markdown.py  word.py
qawiki/prompts/: query.py
qawiki/references/: __init__.py  store.py
qawiki/routing/: __init__.py  classifier.py
qawiki/tools/: __init__.py  base.py  registry.py
tests/: test_governance_integration.py  test_learn_from_document.py  test_p1p3.py  test_source_update.py
tests/fixtures/: sample_questions.json
xknowledge/: cli.py  config.py  pipeline.py
xknowledge/core/: framework.py  insight.py  retriever.py  source.py  utils.py
xknowledge/governance/: __init__.py  permissions.py  review.py  states.py
xknowledge/parsers/: markdown.py  word.py
xknowledge/prompts/: framework.py  insight.py
xknowledge/routing/: classifier.py
xknowledge/tools/: __init__.py
